--- a/src/app/components/home/education/edit-education/edit-education.component.css
+++ b/src/app/components/home/education/edit-education/edit-education.component.css
@@ -1,5 +1,30 @@
+.items {
+    border-left: solid 3px white;
+    margin-left: 10%;
+    margin-bottom: 10px;
+  }
+  
+  .item {
+    display: flex;
+    width: 100%;
+    min-height: 2em;
+    font-size: 1.5em;
+  }
+  
+  .date {
+    border-bottom: solid 1px white;
+    width: fit-content;
+    padding: 0 10px;
+    text-align: center;
+  }
+
+
+
+  
+
 input{
     background-color: black;
     border: 1px solid white;
     height: 2em;
 }
+
