--- a/src/app/components/login/get-in/get-in.component.html
+++ b/src/app/components/login/get-in/get-in.component.html
@@ -7,10 +7,15 @@
         </div>
         
         <form action="" [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)">
+
+            <!-- username -->
             <div class="input">
                 <img src="./../../../../assets/images/user-line.png" alt="">
                 <input type="text" placeholder="username" formControlName="username">
-            </div><div class="input">
+            </div>
+
+            <!-- password -->
+            <div class="input">
                 <img src="./../../../../assets/images/lock-line.png" alt="">
                 <input type="password" placeholder="password" formControlName="password">
             </div>
@@ -19,7 +24,7 @@
         </form>
         
         <div class="foot">
-            <a routerLink="/">enter as a guest</a>
+            <a routerLink="/home">enter as a guest</a>
         </div>
     </div>
 
