--- a/src/app/components/home/header/header.component.css
+++ b/src/app/components/home/header/header.component.css
@@ -4,18 +4,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 .header-right{
-    margin: left;
-    margin-right: 15px;
     display: flex;
     justify-content: space-evenly;
 }
 
 .header-right div {
-    margin-left: 15px;
-    margin-right: 15px;
     cursor: pointer;
+    margin: 0 1em;
+
 }
 
 .logo {
@@ -31,7 +30,8 @@ button {
     color: white;
     cursor: pointer;
 }
-button:hover {
+
+.seccions button:hover {
     padding-bottom: 0px;
     margin-bottom: 0px;
     border-bottom: solid 2px white;
@@ -48,7 +48,7 @@ a{
 a:hover {
     background-color: white;
     color: black;
-    transition: ease-in-out 0.5s;
+    transition: ease-in-out 0.3s;
     box-shadow: 1px 1px 5px white;
 }
 #link{
@@ -58,8 +58,75 @@ a:hover {
 }
 
 
-
 #user{
     border-radius: 100px;
     padding: 5px 3px 3px 3px;
+    margin-right: 15px;
 }
+
+
+
+/* menu de hamburgesa */
+.menuIcon{
+    display: none;
+}
+/* menu desplegado */
+.menuMovile{
+    display: none;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    right: 0;
+    background-color: rgb(0, 0, 0);
+    height: 100%;
+    width: 100%;
+}
+
+.menuMovile div{
+    margin: 1em 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+/* links del navbar */
+.menuMovile a{
+border: none;
+width: 80%;
+height: 100%;
+display: flex;
+justify-content: center;
+}
+.menuMovile a:hover{
+    font-weight: 600;
+
+}
+/* github */
+#linkMovile{
+    background-color: black;
+}
+#linkMovile button{
+    width: 60%;
+    background-color: black;
+}
+#linkMovile button:hover{
+    border: 2px solid white;
+    transition: ease-in-out 0.5s;
+}
+
+
+
+@media only screen and (max-width: 850px){
+.menuIcon{
+        display: block;
+        display: flex;
+        align-items: center;
+}
+.seccions, #link {
+    display: none;
+}
+.menuMovile{
+    display: flex;
+    flex-direction: column;
+}
+
+  }
