--- a/src/app/components/login/get-in/get-in.component.html
+++ b/src/app/components/login/get-in/get-in.component.html
@@ -6,7 +6,7 @@
             
         </div>
         
-        <form action="" [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)">
+        <form action="" [formGroup]="loginForm" (ngSubmit)="onLogin($event)" >
 
             <!-- username -->
             <div class="input">
