--- a/src/app/components/home/main/main.component.css
+++ b/src/app/components/home/main/main.component.css
@@ -14,7 +14,7 @@ main {
 .header {
   width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   padding: 0.5em;
 }
