--- a/src/app/components/home/main/edit-main/edit-main.component.html
+++ b/src/app/components/home/main/edit-main/edit-main.component.html
@@ -7,7 +7,7 @@
         
         <div class="inputdiv">
             <input #foto id="foto" type="url">
-            <button>add</button>
+            <button><i class="fa-solid fa-plus"></i></button>
         </div>
     </div>
 
