--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -1,1 +1,24 @@
-<p>proyects works!</p>
+<main>
+    <app-header></app-header>
+
+    <div class="principal">
+
+        <section class="cards">
+
+            <div class="card" href="#">
+
+                <img class="card-img" src="https://source.unsplash.com/category/people/400x260" alt="People">
+                
+                <div class="card-text">
+                    <h4>{{title}}</h4>
+                    
+                    <p> {{description}} </p>
+                    <a href="{{url}}">{{url}}</a>
+                </div>
+            </div>
+
+        </section>
+
+    </div>
+
+</main>
