--- a/src/app/components/login/get-in/get-in.component.html
+++ b/src/app/components/login/get-in/get-in.component.html
@@ -10,13 +10,13 @@
 
             <!-- username -->
             <div class="input">
-                <img src="./../../../../assets/images/user-line.png" alt="">
+                <i class="fa-solid fa-user"></i>
                 <input type="text" placeholder="username" formControlName="username">
             </div>
 
             <!-- password -->
             <div class="input">
-                <img src="./../../../../assets/images/lock-line.png" alt="">
+                <i class="fa-solid fa-lock"></i>
                 <input type="password" placeholder="password" formControlName="password">
             </div>
 
