--- a/src/app/components/login/login-header/login-header.component.html
+++ b/src/app/components/login/login-header/login-header.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="button" >
         <button routerLink="/new-account">
-            <img src="./../../../../assets/images/user-add-line.png" alt="" id="img">
+            <i class="fa-solid fa-user-plus" font-size="20px"></i>
             <p>Create Account</p>
         </button>
     </div>
