--- a/src/app/components/home/education/edit-education/edit-education.component.html
+++ b/src/app/components/home/education/edit-education/edit-education.component.html
@@ -11,7 +11,8 @@
         </div>
 
         <button (click)="onDelete(edu.id)">
-            <img src="../../../../../assets/images/close-fill.png" alt="">
+            <!-- <img src="../../../../../assets/images/close-fill.png" alt=""> -->
+            <i class="fa-solid fa-trash-can"></i>
         </button>
     </div>
 </div>
@@ -20,7 +21,8 @@
 
         <div class="date">
             <button (click)="onAdd()" *ngIf="mostrar">
-                <img src="../../../../../assets/images/add-line.png" alt="">
+                <!-- <img src="../../../../../assets/images/add-line.png" alt=""> -->
+                <i class="fa-solid fa-square-plus"></i>
             </button>
         </div>
 
@@ -38,7 +40,7 @@
                 </div>
         
                 <button type="submit" >
-                    <img src="../../../../../assets/images/check-fill.png" alt="">
+                    <i  class="fa-solid fa-check"></i>
                 </button>
             </div>
         
