--- a/src/app/components/home/education/education.component.css
+++ b/src/app/components/home/education/education.component.css
@@ -48,18 +48,19 @@ main {
 }
 
 #edit {
-  height: 2em;
-  aspect-ratio: 1/1;
-  border-radius: 100%;
-  padding: 5px;
-  align-items: center;
-  background-color: aliceblue;
   position: absolute;
   right: 10px;
   top: 10px;
   cursor: pointer;
+  background-color: white;
+  font-size: 1.5em;
+  border-radius: 100%;
+  height: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1/1;
+  color: black;
 }
 
-#edit img {
-  width: 100%;
-}
+
