--- a/src/app/components/home/header/header.component.css
+++ b/src/app/components/home/header/header.component.css
@@ -27,13 +27,13 @@ button {
     font-weight: 400;
     font-size: 20px;
     background-color: black;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
     color: white;
     cursor: pointer;
 }
 
 .seccions button:hover {
-    padding-bottom: 0px;
-    margin-bottom: 0px;
     border-bottom: solid 2px white;
     transition: ease-in-out 0.5s;
 }
@@ -59,9 +59,14 @@ a:hover {
 
 
 #user{
-    border-radius: 100px;
-    padding: 5px 3px 3px 3px;
     margin-right: 15px;
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
+    
+}
+#user label{
+    cursor: pointer;
 }
 
 
