--- a/src/app/components/home/main/main.component.css
+++ b/src/app/components/home/main/main.component.css
@@ -3,12 +3,14 @@ main {
   justify-content: center;
   background-color: black;
   height: 100%;
+
 }
 .principal {
   margin: 40px 0 20px 0;
   height: fit-content;
   width: 80%;
   border: solid 1px white;
+  position: relative;
 }
 
 .header {
@@ -18,15 +20,23 @@ main {
   align-items: center;
   padding: 0.5em;
 }
+
 #edit {
-  height: 2em;
-  aspect-ratio: 1/1;
-  border-radius: 100%;
-  padding: 5px;
-  align-items: center;
-  background-color: aliceblue;
+  position: absolute;
+  right: 10px;
+  top: 10px;
   cursor: pointer;
+  background-color: white;
+  font-size: 1.5em;
+  border-radius: 100%;
+  height: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1/1;
+  color: black;
 }
+
 
 .showInfo {
   display: grid;
