--- a/src/app/components/home/main/main.component.html
+++ b/src/app/components/home/main/main.component.html
@@ -3,9 +3,11 @@
     <div class="principal">
 
         <div class="header">
-            <div id="edit" (click)="onEdit()">
-                <img *ngIf="mostrar" src="./../../../../assets/images/edit-fill.png" alt="">
-                <img *ngIf="!mostrar" src="./../../../../assets/images/close-fill.png" alt="">
+            <div *ngIf="edit" id="edit" (click)="onEdit()">
+                <!-- <img *ngIf="mostrar" src="./../../../../assets/images/edit-fill.png" alt=""> -->
+                <label *ngIf="mostrar"><i  class="fa-solid fa-pen"></i> </label>
+                <!-- <img *ngIf="!mostrar" src="./../../../../assets/images/close-fill.png" alt=""> -->
+                <label *ngIf="!mostrar"> <i class="fa-solid fa-xmark"></i> </label>
             </div>
         </div>
         <div class="showInfo" *ngIf="mostrar">
