--- a/src/app/components/home/skills/skills.component.css
+++ b/src/app/components/home/skills/skills.component.css
@@ -102,18 +102,17 @@ h3 {
 
 /* boton edit */
 #edit {
-  height: 2em;
-  aspect-ratio: 1/1;
-  border-radius: 100%;
-  padding: 5px;
-  align-items: center;
-  background-color: aliceblue;
   position: absolute;
   right: 10px;
   top: 10px;
   cursor: pointer;
-}
-
-img {
-  width: 100%;
+  background-color: white;
+  font-size: 1.5em;
+  border-radius: 100%;
+  height: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1/1;
+  color: black;
 }
